--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.6.1",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "next-i18next": "^15.4.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-i18next": "^16.2.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
