--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-i18next": "^15.4.2",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-i18next": "^16.2.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
